# sietch

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  sietch-ssl.h  sietch.c  sietch.h
src/platform/openssl/: sietch-ssl.c
src/platform/weak/: sietch-ssl.c
tests/: Makefile.am  test_sietch_init  test_sietch_init.c  test_sietch_version  test_sietch_version.c  testsuite.at
